--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           context: ./docker
           load: true
-          tags: ${TEST_TAG}
+          tags: ${{ env.TEST_TAG }}
           build-args: |
             BASE_IMAGE=jenkins/jenkins:jdk17
 
